Scrap venues