@@ -4,8 +4,8 @@ import com.mathieuaime.untappdscraper.model.CheckIn;
 import com.mathieuaime.untappdscraper.scraper.Scraper;
 import java.io.IOException;
 import java.time.ZoneOffset;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 import org.influxdb.BatchOptions;
@@ -19,26 +19,36 @@ import org.jsoup.nodes.Element;
 public class UntappdScraper {
 
   public static void main(String[] args) {
-    scrapAccount(Arrays.asList());
+    scrapVenues(List.of());
+    scrapAccount(List.of());
   }
 
   private static void scrapAccount(Collection<String> usernames) {
     for (String username : usernames) {
-      getItems(username).map(element -> Scraper.extractCheckIn(username, element))
+      getCheckIns("https://untappd.com/user/" + username + "/beers", ".beer-item")
+          .map(element -> Scraper.extractCheckInFromUser(username, element))
           .forEach(UntappdScraper::storeCheckIn);
     }
   }
 
-  private static Stream<Element> getItems(String username) {
+  private static void scrapVenues(Collection<String> venues) {
+    for (String venue : venues) {
+      getCheckIns("https://untappd.com/v/" + venue, ".item")
+          .map(element -> Scraper.extractCheckInFromVenue(venue.split("/")[0], element))
+          .forEach(UntappdScraper::storeCheckIn);
+    }
+  }
+
+  private static Stream<Element> getCheckIns(String url, String classItem) {
     try {
-      return getConnection(username).get().select(".beer-item").stream();
+      return getConnection(url).get().select(classItem).stream();
     } catch (IOException ignored) {
       return Stream.empty();
     }
   }
 
-  private static Connection getConnection(String username) {
-    Connection connection = Jsoup.connect("https://untappd.com/user/" + username + "/beers");
+  private static Connection getConnection(String url) {
+    Connection connection = Jsoup.connect(url);
     connection.userAgent("Mozilla");
     connection.timeout(5000);
     return connection;
@@ -52,7 +62,7 @@ public class UntappdScraper {
       influxDB.enableBatch(BatchOptions.DEFAULTS);
 
       influxDB.write(Point.measurement("checkin")
-          .time(checkIn.date().toInstant(ZoneOffset.ofHours(2)).toEpochMilli(),
+          .time(checkIn.date().toInstant(ZoneOffset.UTC).toEpochMilli(),
               TimeUnit.MILLISECONDS)
           .addField("username", checkIn.username())
           .addField("brewery", checkIn.beer().brewery())
@@ -61,6 +71,7 @@ public class UntappdScraper {
           .addField("globalScore", checkIn.beer().globalScore())
           .addField("abv", checkIn.beer().abv())
           .addField("ibu", checkIn.beer().ibu())
+          .addField("venue", checkIn.venue())
           .build());
     }
   }
